[gd_scene load_steps=5 format=3 uid="uid://cploxax04lv60"]

[ext_resource type="FontFile" uid="uid://c7w1nb10xnqaq" path="res://tinypixel/tinypixel/tinypixel.otf" id="1_40y5j"]
[ext_resource type="Script" path="res://DialogueSystem/dialogue.gd" id="1_a735p"]
[ext_resource type="Texture2D" uid="uid://t2roklskd53r" path="res://ASSETS/TILES/dialogue_backgroung.png" id="2_7xd0b"]
[ext_resource type="Script" path="res://DialogueSystem/pause_calculator.gd" id="4_bcwgt"]

[node name="Dialogue" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 80.0
offset_bottom = 40.0
script = ExtResource("1_a735p")

[node name="Background" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_7xd0b")
region_rect = Rect2(0, 5, 12, 2)

[node name="Content" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 0
offset_left = 8.0
offset_top = 8.0
offset_right = 72.0
offset_bottom = 32.0
theme_override_fonts/normal_font = ExtResource("1_40y5j")
theme_override_font_sizes/bold_italics_font_size = 7
theme_override_font_sizes/italics_font_size = 7
theme_override_font_sizes/mono_font_size = 7
theme_override_font_sizes/normal_font_size = 7
theme_override_font_sizes/bold_font_size = 7
bbcode_enabled = true

[node name="TypeTyper" type="Timer" parent="."]
wait_time = 0.04

[node name="PauseCalculator" type="Node" parent="."]
script = ExtResource("4_bcwgt")

[node name="PauseTimer" type="Timer" parent="."]

[connection signal="timeout" from="TypeTyper" to="." method="_on_type_typer_timeout"]
[connection signal="pause_requested" from="PauseCalculator" to="." method="_on_pause_calculator_pause_requested"]
[connection signal="timeout" from="PauseTimer" to="." method="_on_pause_timer_timeout"]
